# agent-chorus

./: .feature-test-report-v4.md  .gitignore  .gitleaksignore  .release-play.json  AGENTS.md  AGENT_CONTEXT.md  CLAUDE.md  CONTEXT_PACK.md  CONTRIBUTING.md  GEMINI.md  LICENSE  PROTOCOL.md  README.md  RELEASE_NOTES.md  SKILL.md  package-lock.json  package.json
.agent-context/: GUIDE.md  relevance.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
cli/: Cargo.toml
cli/src/: agent_context.rs  agents.rs  checkpoint.rs  context_pack.rs  cursor_app.rs  cursor_cwd.rs  cursor_parse.rs  diff.rs  doctor.rs  main.rs  messaging.rs  relevance.rs  report.rs  setup.rs  summary.rs  teardown.rs  timeline.rs  update_check.rs  utils.rs
cli/src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs  hermes.rs  mod.rs
cli/templates/: settings.agent-context.json
docs/: CLI_REFERENCE.md  DEVELOPMENT.md  agent-context-presentation.md  context-pack-results.md  session-handoff-guide.md
research/: action-plan.md  agent-context-design-principles.md  agent-context-map-design.md  agent-context-next-version-agenda.md  agent-context-v2-design.md  agent-context-vs-skills.md  context-pack-design-principles.md  context-pack-next-version-agenda.md  enforcement-and-regen-plan.md  enforcement-progress.md  rename-context-pack-to-agent-context.md  rename-progress.md
schemas/: checkpoint.schema.json  error.schema.json  handoff.schema.json  list-output.schema.json  message.schema.json  read-output.schema.json  report.schema.json  summary-output.schema.json  task.schema.json  timeline-output.schema.json
scripts/: check_package_contents.sh  check_readme_examples.sh  compare_read_output.cjs  conformance.sh  read_session.cjs  record_demo.js  record_demo.sh  scrub_parity_output.cjs  test_adversarial_redaction.sh  test_agent_context.sh  (+7 more)
(+129 files in other folders)
