[package]
name = "agent-bridge"
version = "0.6.2"
edition = "2021"
rust-version = "1.74"
description = "Local-first CLI to read, compare, and hand off context across Codex, Claude, Gemini, and Cursor sessions."
license = "MIT"
repository = "https://github.com/cote-star/agent-bridge"
homepage = "https://github.com/cote-star/agent-bridge"
documentation = "https://docs.rs/agent-bridge"
readme = "../README.md"
keywords = ["agent-bridge", "multi-agent", "cli", "cross-agent", "context-engineering"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "bridge"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.57", features = ["derive"] }
dirs = "6.0.0"
globset = "0.4.14"
serde_json = "1.0.149"
sha2 = "0.10.9"
ureq = { version = "2.12", features = ["json"] }
